--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,3 +1,7 @@
-Discord.py
-Asyncio
-client.run(os.getenv('token'))
+
+pynacl==1.2.1
+git+https://github.com/Rapptz/discord.py@rewrite#egg=discord.py[voice]
+pip
+youtube_dl
+colorlog
+cffi --only-binary all; sys_platform == 'win32'
