--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 
 pynacl==1.2.1
-git+https://github.com/Rapptz/discord.py@rewrite#egg=discord.py[voice]
+git+https://github.com/Rapptz/discord.py
 pip
 youtube_dl
 colorlog
